--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p><a href="/tania/index.html">Ghibli Films</a></p>
+    <h1>Hello </h1>
+    <p><a href="/tania/index.html">Hema's World</a></p>
 </body>
 </html>
