--- a/specialtania.html
+++ b/specialtania.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Hema Sample</title>
+    <title>Ghibli App</title>
 
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet" />
-    <link href="teststyle.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
   </head>
 
   <body>
     <div id="root"></div>
-    <script src="Scripts.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
