Fixing URL for specialtania

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello </h1>
-    <p><a href="/tania/index.html">Hema's World</a></p>
+    <p><a href="/specialtania.html">Hema's World</a></p>
 </body>
 </html>
