--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello </h1>
-    <p><a href="/specialtania.html">Hema's World</a></p>
+    <h1>Click on below link to enter into Tania's World</h1>
+    <p><a href="/specialtania.html">Here Come's Tania</a></p>
 </body>
 </html>
