--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Click on below link to enter into Tania's World</h1>
-    <p><a href="/specialtania.html">Here Come's Tania</a></p>
+    <p><a href="tania/specialtania.html">Here Come's Tania</a></p>
 </body>
 </html>
