Dogs webpage is fixed now

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Click on below link to enter into Tania's World</h1>
-    <p><a href="tania/specialtania.html">Here Come's Tania</a></p>
+    <h1>World</h1>
+    <p><a href="/tania/specialtania.html">Ghibli Films</a></p>
+    <p><a href="dogs/specialtania.html">dogs</a></p>
 </body>
 </html>
